namespaces/live-1.cloud-platform.service.justice.gov.uk/common-platform-connector-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: common-platform-connector-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Legal Aid Agency"
    cloud-platform.justice.gov.uk/application: "HMCTS Common Platform Connector"
    cloud-platform.justice.gov.uk/owner: "Crime Apps: laa@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-common-platform-connector"
    cloud-platform.justice.gov.uk/slack-channel: "laa-court-data-ui-dev"
